Add light+dark theme: rewrite tokens to :root/.dark with @theme inline, ThemeToggle component, FOUC prevention, revert component hacks to standard shadcn classes

--- a/ribbit/public/index.html
+++ b/ribbit/public/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="/assets/main.css" />
 </head>
 <body>
+  <script>
+    // Prevent flash of wrong theme — runs before first paint
+    (function(){var t=localStorage.getItem('theme');if(t==='dark'||(t!=='light'&&matchMedia('(prefers-color-scheme:dark)').matches))document.documentElement.classList.add('dark')})();
+  </script>
   <div id="app"></div>
   <script type="module" src="__BUNDLE_PATH__"></script>
 </body>
