docs: theme migration, alphabetize components, shadcn sidebar, copy page button
- Theme migration: flash-prevention script in index.html now reads new
  ribbit_dark_mode/ribbit_base_theme keys with fallback to old 'theme' key.
  theme.ts initTheme() migrates old key on first load.
- Blazecn intro: components list fully alphabetized, added all missing entries
  (Alert, Aspect Ratio, Avatar, Label, Progress, Scroll Area, Separator,
  Skeleton, Spinner, Textarea). Renamed Theme Toggle to Themes.
- Sidebar: restructured to match shadcn  Getting Started section (with Themes
  moved here) + one flat alphabetical Components section. Removes the 6-category
  split (Core/Form/Data Display/Navigation/Overlay/Layout) for cleaner navigation.
- Copy page button: new PageCopyButton split-button component at top-right of
  every doc page header. Dropdown menu with: Copy page, Copy page as Markdown
  for LLMs, View as Markdown (opens in new tab), View this page as plain text.
  Uses data-slot='doc-page' on DocsLayout content wrapper for DOM querying.

--- a/ribbit/public/index.html
+++ b/ribbit/public/index.html
@@ -13,7 +13,14 @@
 <body>
   <script>
     // Prevent flash of wrong theme — runs before first paint
-    (function(){var t=localStorage.getItem('theme');if(t==='dark'||(t!=='light'&&matchMedia('(prefers-color-scheme:dark)').matches))document.documentElement.classList.add('dark')})();
+    (function(){
+      var d=localStorage.getItem('ribbit_dark_mode');
+      if(d===null){var old=localStorage.getItem('theme');if(old){d=old==='dark'?'true':'false'}}
+      var dark=d==='true'||(d===null&&matchMedia('(prefers-color-scheme:dark)').matches);
+      if(dark)document.documentElement.classList.add('dark');
+      var t=localStorage.getItem('ribbit_base_theme');
+      if(t&&t!=='neutral')document.documentElement.classList.add('theme-'+t);
+    })();
   </script>
   <div id="app"></div>
   <script type="module" src="__BUNDLE_PATH__"></script>
