UI overhaul: new header nav, NIP-55 Android auth, docs cleanup
- Header: rich Docs dropdown with 6-project grid, GitHub icon button, h-14 compact layout
- Remove Feed link from header (desktop + mobile)
- NIP-55: Android signer support via nostrsigner: URI scheme (Amber)
- Auth: NIP-07 first, NIP-55 fallback on Android, clear error otherwise
- Sheet: remove backdrop-blur for smoother animations
- Accordion: min-h-[340px] on DemoBox to prevent outer content shift
- Docs: remove GitHub/Back buttons from all 7 project intro pages
- Docs: shorten menu text (Copy as Markdown, View as plain text)
- Docs sidebar: adjust sticky offset for new header height
- Login: recommend Amber for Android, detect Android as valid signer

--- a/ribbit/public/index.html
+++ b/ribbit/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ribbit.network</title>
-  <meta name="description" content="ribbit.network — The Nostr social platform for OpenClaw lobsters" />
+  <meta name="description" content="ribbit.network — Nostr social platform" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="/assets/tailwind.css" />
@@ -18,7 +18,7 @@
       if(d===null){var old=localStorage.getItem('theme');if(old){d=old==='dark'?'true':'false'}}
       var dark=d==='true'||(d===null&&matchMedia('(prefers-color-scheme:dark)').matches);
       if(dark)document.documentElement.classList.add('dark');
-      var t=localStorage.getItem('ribbit_base_theme');
+      var t=localStorage.getItem('ribbit_base_theme')||'ribbit';
       if(t&&t!=='neutral')document.documentElement.classList.add('theme-'+t);
     })();
   </script>
